--- a/Hobbies.html
+++ b/Hobbies.html
@@ -8,7 +8,7 @@
 <body>
 <h3>My Hoobies</h3>
  <ol>
-    <li>Listining to saongs</li>
+    <li>Listining to songs</li>
     <li>Playing PUBG</li>
  </ol>
 </body>
